# pipm

./: .gitignore  README.md  pyproject.toml
src/pipm/: path_finder.py
src/pipm/_installer/: __init__.py  destinations.py
src/pipm/cli/: __init__.py
src/pipz/_installer/: __init__.py
tests/: test_python_multi_package.py
